# cgal-public-dev

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CGALConfig.cmake  CGALConfigVersion.cmake  CGALExports.cmake  CGALLibConfig.cmake  CGAL_CoreLibConfig.cmake  CGAL_ImageIOLibConfig.cmake  CGAL_Qt5LibConfig.cmake  README  README.md  _post-receive-split-email.sh  _update-check-windows-crlf  autoupdate.cfg  cgal-git-commit-notifier-grouped.yml  cgal-git-commit-notifier.yml  cmake_uninstall.cmake  copyright  cron-determine-testsuite-hash  cron-push-to-gforge  get_client_hooks  git-notifier  install_manifest.txt  mailhook.cfg  note.org  place-hooks  post-receive  post-receive-email-commits.sh  post-receive-email.sh  post-receive-git-commit-notifier-grouped.sh  post-receive-git-commit-notifier.sh  post-receive-git-multimail  post-receive-git-multimail.py  post-receive-notifier  post-receive-split-email.sh  post-receive-store-push-times  post-update-push-to-gsoc  pre-commit  (+5 more)
.sandbox/: .gitignore  CMakeLists.txt  README.md  build.bat  clean.bat  generate.bat
.sandbox/examples/: CMakeLists.txt  bilinear_patch.cpp  collision_candidates.cpp  collision_function.cpp  collision_scene_has_collision.cpp  collision_test_boundary.cpp  edge_edge_collision.cpp  triangle_triangle_collision.cpp  update_functor.cpp
.sandbox/include/: AABB_triangle_trajectory_primitive.h  Bilinear_patch_3.h  Collision_candidate_3.h  Collision_function.h  Collision_functions.h  Collision_mesh_3.h  Collision_mesh_3_Collision_mesh_3_do_collide.h  Collision_object.h  Collision_scene_3.h  Collision_scene_3_has_collision.h  Collision_test_boundaries.h  Collision_test_boundary.h  Collision_type.h  Collisions_3.h  Mesh_index.h  Point_3_Triangle_3_collision_function.h  Point_3_Triangle_3_collision_test_boundary.h  Point_3_Triangle_3_do_collide.h  Ray_3_Bilinear_patch_3_do_intersect.h  Segment_3_Segment_3_collision_function.h  Segment_3_Segment_3_collision_test_boundary.h  Segment_3_Segment_3_do_collide.h  Trajectories.h  Triangle_3_Triangle_3_do_collide.h  Update_functors.h  draw_collision_scene.h
.sandbox/mesh/: Sphere_Internal.off
.sandbox/src/: CMakeLists.txt  CMakePresets.json  draw_surface_mesh.cpp
Continuous_collision_detection_3/: CMakeLists.txt
GPU_programs/gpu_gcd/: CMakeLists.txt  MRC_block_kernel.cu  PGCD_kernel.cu  PGCD_with_cache.cu  POSSIBLE_THREATS  QR_GCD_block_kernel.cu  QR_GCD_lite_kernel.cu  QR_GCD_monolithic_kernel.cu  compile  gcd_algorithm_gpu.cu  gcd_algorithm_host.C  main.C  make_clean  mod_reduce_kernel.cu  profile
GPU_programs/gpu_resultant/: CMakeLists.txt  cgal_cmake_lib_defs  interpolate_CRA_kernel.cu  interpolate_test.cu  main.C  open64_source  resultant_algorithm_gpu.cu  resultant_algorithm_host.C  resultant_kernel.cu
GPU_programs/gpu_symbolic/: CMakeLists.txt  cgal_cmake_lib_defs  device_manager.cu
GPU_programs/test_CUDA/: CMakeLists.txt  test_CUDA.C
GPU_programs/webxalci_server/: CMakeLists.txt  compiler_optimize.txt  helper_functions.C  rasterizer.C  runit  server.C  shm_buffer.C  start_webxalci  xalci_server_init.d
GPU_programs/webxtri_server/: CMakeLists.txt  TODOs  helper_functions.C  server.C  skeletonizer.C  ssh_tunneling_infvm1700  start_webxtri  surface_analysis.C
GPU_programs/xtriangulate/: CMakeLists.txt  antialias.vert  cylinder  depth_peel.frag  guenler_surfaces  gumdrop  icetuete_bug  letters_original  mainwnd.cpp  mainwnd.moc  math.cpp  ogl_exts.cpp  ogl_view.cpp  ogl_view.moc  sample.frag  sample.vert  webgl_methods  xtriangulate.cpp  zy_skeletonizer.cpp  zz_surf_analysis.cpp
HexEx/: .gitattributes  2tetsop.off  CMakeLCCViewerQt.inc  CMakeLists.txt  Euler_angles.txt  Half_face_and_transition.h  HexExtr.cpp  HexExtr.h  code.txt  connection_extraction.cpp  connection_extraction.h  dart_extraction.h  display-gmap.cpp  final_output.off  frame_field.h  func.h  functions.h  geometry_extraction.h  handles.cpp  handles.h  hexahedron_extraction.cpp  hexahedron_extraction.h  hexahedron_extraction_test.cpp  hexextr.cpp  hexextr.h  integer_grid_map.h  linear_cell_complex_3_viewer_qt.h  main  main.cpp  maintest.cpp  myscript.sh  output.off  output_parametrized_mesh_test.cpp  parametrization.h  parametrized_LCC  post_processing.cpp  post_processing.h  preprocessing.cpp  sanitization.cpp  sanitization.h  (+9 more)
HexEx/data/: 2tets  2tets.off  armadillo_pc.off  bunny.off  camel  cheese.off  cube  cube.off  elephant  elephant.off  fandisk.off  holes3_pc.off  out.off  small_points_3
HexEx/integergrid/: frame_field.cpp
HexEx/mesh/: 2tets.off  cheese.off  cube.off  elephant.off  fandisk.off  parametrizedcheese.off  parametrizedcube.off  parametrizedelephant.off  parametrizedfandisk.off
HexEx/tests/: 2tets  2tets-1  2tets-10  2tets-11  2tets-12  2tets-13  2tets-14  2tets-15  2tets-16  2tets-17  2tets-18  2tets-2  2tets-20  2tets-21  2tets-22  2tets-23  2tets-24  2tets-25  2tets-3  2tets-4  2tets-5  2tets-6  2tets-7  2tets-8  2tets-9  2tets-triangulation_3  cube  cube-17  cube-19  cube-20  cube-22  elephant-1  elephant-16  elephant-20  elephant-21  elephant-22  elephant-23  elephant-24  elephant-25  fandisk-1  (+12 more)
HexEx/triangulation_to_LCC_tests/: readme
Levels_of_detail/benchmark/: CMakeLists.txt
Poisson_surface_reconstruction_3/warmup/: CMakeLists.txt  c2t3.h  c3t3.h  function_ellipsoid.h  function_sphere.h  function_torus.h  main.cpp  mesh.qrc  mesh.ui  options.h  options.ui  scene.cpp  scene.h  smooth.cpp  types.h  viewer.cpp  viewer.h  window.cpp  window.h
Swept_volume_mesh_generation_3/src/: CMakeLists.txt  Triangle_voxelizer.cpp  Voxelization_3.cpp
__OctreeMarchingCubes/: CMakeLists.txt  Edge.h  EdgeStore.h  Edge_store.h  Octree_edge.h  Octree_mesh_extractor.h  main.cpp
_simd-experiments/ray-bbox-intersections/: CMakeLists.txt  bbox.h  load_scenarios.h  main.cpp  ray.h  util.h  vector3.h  xbbox.h  xray.h  xvector3.h
demo/Algebraic_curve_kernel_2/: Bezier_curves_with_ak_2.cpp  CMakeLists.txt  arrangements_2.cpp  create_bezier_example  curve_analyser_2.cpp  curve_pair_analyser_2.cpp  generate_bezier_curves.cpp  rotated_arrangements_2.cpp  (+1 more)
(+5931 files in other folders)
